--- a/application/views/auth/login.html
+++ b/application/views/auth/login.html
@@ -1,14 +1,34 @@
 {% extends 'common/base.html' %}
 
 {% block title %}Log In{% endblock %}
+{% block head %}
+<style>
+.form-auth {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+</style>
+{% endblock %}
 
 {% block content %}
+<main class="form-auth">
   <form method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
-    <input type="submit" value="Log In">
+    <h1 class="h3 mb-3 fw-normal text-center">Please sign in</h1>
+
+    <div class="form-floating">
+      <input type="text" class="form-control" id="username" name="username" placeholder="Username" required>
+      <label for="Input_Username">Username</label>
+    </div>
+
+    <div class="form-floating">
+      <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
+      <label for="floatingPassword">Password</label>
+    </div>
+
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
   </form>
   <div><a href="{{ url_for('auth.register') }}">Don't have an account? Register here</a></div>
+</main>
 {% endblock %}
