--- a/application/views/common/header.html
+++ b/application/views/common/header.html
@@ -8,13 +8,13 @@
         <div class="navbar-collapse collapse" id="collapseNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="/plan">Plan</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" data-bs-toggle="collapse">Link</a>
+                    <a class="nav-link" href="/faq">FAQ</a>
                 </li>
             </ul>
             <ul class="navbar-nav ms-auto">
