--- a/application/views/city_plan.html
+++ b/application/views/city_plan.html
@@ -15,7 +15,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ city['name'] }}, {{city['country']}}</h5>
                     <p class="card-text">{{ city['desc'] }}</p>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#SurveyModal" data-bs-city="city['name']">Plan!</button>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#SurveyModal" data-bs-city="{{ city['name'] }}">Plan!</button>
                 </div>
             </div>
         </div>
@@ -34,21 +34,54 @@
           </div>
 
           <div class="modal-body">
-            <form>
+            <form action="/create-itinerary" id="Form_createItinerary"  method="post">
               <div class="mb-3">
-                <label for="recipient-name" class="col-form-label">Recipient:</label>
-                <input type="text" class="form-control" id="recipient-name">
+                <label for="survey-city" class="col-form-label">City:</label>
+                <input type="text" class="form-control" id="survey-city" disabled readonly>
               </div>
+
               <div class="mb-3">
-                <label for="message-text" class="col-form-label">Message:</label>
-                <textarea class="form-control" id="message-text"></textarea>
+                <label for="survey-days" class="col-form-label">How many days do you want to travel?(1-7):</label>
+                <input type="text" class="form-control" id="survey-days">
               </div>
+
+              
+
+              <div class="mb-3">
+                <label for="message-text" class="col-form-label">Where do you prefer to live?</label>
+                <br>
+                <input type="radio" class="btn-check" name="livingPreference" id="survey-living-city" autocomplete="off" value="city">
+                <label class="btn btn-info" for="survey-living-city">City</label>
+
+                <input type="radio" class="btn-check" name="livingPreference" id="survey-living-country" autocomplete="off" value="country">
+                <label class="btn btn-info" for="survey-living-country">Country</label>
+              </div>
+
+
+              <div class="mb-3">
+                <label for="message-text" class="col-form-label">What do you like doing on vaction</label>
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="check1" name="check_exploring" value="1" checked>
+                  <label class="form-check-label" for="check1">Exploring</label>
+                </div>
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="check2" name="check_relaxing" value="1">
+                  <label class="form-check-label" for="check2">Relaxing</label>
+                </div>
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="check3" name="check_" value="1">
+                  <label class="form-check-label" for="check3">Relaxing</label>
+                </div>
+              </div>
+
+              
+
             </form>
           </div>
 
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Generate Itinerary</button>
+            <button type="submit" form="Form_createItinerary" class="btn btn-primary">Generate Itinerary</button>
           </div>
         </div>
       </div>
@@ -59,21 +92,20 @@
 
 {% block js %}
 <script>
-var exampleModal = document.getElementById('SurveyModal');
-exampleModal.addEventListener('show.bs.modal', function (event) {
+var surveyModal = document.getElementById('SurveyModal');
+surveyModal.addEventListener('show.bs.modal', function (event) {
     // Button that triggered the modal
     var button = event.relatedTarget
     // Extract info from data-bs-* attributes
-    var recipient = button.getAttribute('data-bs-city')
+    var city = button.getAttribute('data-bs-city')
     // If necessary, you could initiate an AJAX request here
     // and then do the updating in a callback.
     //
     // Update the modal's content.
-    var modalTitle = exampleModal.querySelector('.modal-title')
-    var modalBodyInput = exampleModal.querySelector('.modal-body input')
+    var modalCity = surveyModal.querySelector('#survey-city')
 
     //modalTitle.textContent = 'New message to ' + recipient
-    modalBodyInput.value = recipient
+    modalCity.value = city
 });
 
 </script>
