--- a/application/views/schedule.html
+++ b/application/views/schedule.html
@@ -9,105 +9,35 @@
             <div class="col-lg-5 mb-5 mb-lg-0">
                 <h5 class="mb-4 text-info aos-init aos-animate" data-aos="fade-up">Schedule and Agenda</h5>
                 <div class="nav nav-pills flex-column aos-init aos-animate" id="myTab" role="tablist" data-aos="fade-up">
-                    <button class="nav-link px-4 text-start mb-3 active" id="d1-tab" data-bs-toggle="tab" data-bs-target="#day1" type="button" role="tab" aria-controls="day1" aria-selected="true">
-                        <span class="d-block fs-5 fw-bold">Day 1</span>
-                        <span class="small">Mon, Jan 2, 2023</span>
+                    {% for day in data.days %}
+                    <button class="nav-link px-4 text-start {% if loop.index==1 %}mb-3 active{% endif %}" id="d{{loop.index}}-tab" data-bs-toggle="tab" data-bs-target="#day{{loop.index}}" type="button" role="tab" aria-controls="day{{loop.index}}" aria-selected={% if loop.index==1 %}"true"{% else %}"false" tabindex="-1"{% endif %}>
+                        <span class="d-block fs-5 fw-bold">Day {{loop.index}}</span>
                     </button>
-                    
-                    <button class="nav-link px-4 text-start" id="d2-tab" data-bs-toggle="tab" data-bs-target="#day2" type="button" role="tab" aria-controls="day2" aria-selected="false" tabindex="-1">
-                        <span class="d-block fs-5 fw-bold">Day 2</span>
-                        <span class="small">Tue, Jan 3, 2023</span>
-                    </button>
+                    {% endfor %}
                 </div>
             </div>
             
             <div class="col-lg-7 col-xl-6">
                 <div data-aos="fade-up" class="tab-content aos-init aos-animate" id="myTabContent">
-                    <div class="tab-pane fade active show" id="day1" role="tabpanel" aria-labelledby="d1-tab">
+                    {% for day in data.days %}
+                    <div class="tab-pane fade {% if loop.index==1 %}active show{% endif %}" id="day{{loop.index}}" role="tabpanel" aria-labelledby="d{{loop.index}}-tab">
                         <ul class="pt-4 list-unstyled mb-0">
+                            {% for event in day %}
                             <li class="d-flex flex-column flex-md-row py-4">
-                                <span class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 small text-muted">9:00
-                                    AM - 10:00 AM</span>
+                                <span class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 small text-muted">
+                                    {{event.time}}
+                                </span>
                                 <div class="flex-grow-1 ps-4 border-start border-3">
-                                    <h4>Registration and Coffee</h4>
+                                    <h4>{{event.title}}</h4>
                                     <p class="mb-0">
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                                        officia deserunt mollit anim id est laborum.
+                                        {{event.information}}
                                     </p>
                                 </div>
                             </li>
-                            <li class="d-flex flex-column flex-md-row py-4">
-                                <span class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 small text-muted">10:00
-                                    AM - 11:00 AM</span>
-                                <div class="flex-grow-1 ps-4 border-start border-3">
-                                    <h4>Culpa qui officia deserunt</h4>
-                                    <p class="mb-0">
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                                        officia deserunt mollit anim id est laborum.
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="d-flex flex-column flex-md-row py-4">
-                                <span class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 small text-muted">11:00
-                                    AM - 12:30 PM</span>
-                                <div class="flex-grow-1 ps-4 border-start border-3">
-                                    <h4>Excepteur sint occaecat cupidatat</h4>
-                                    <p class="mb-0">
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                                        officia deserunt mollit anim id est laborum.
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="d-flex flex-column flex-md-row py-4">
-                                <span class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 small text-muted">12:30
-                                    PM - 1:30 PM</span>
-                                <div class="flex-grow-1 ps-4 border-start border-3">
-                                    <h4>Lunch break</h4>
-                                    <p class="mb-0">
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                                        officia deserunt mollit anim id est laborum.
-                                    </p>
-                                </div>
-                            </li>
+                            {% endfor %}
                         </ul>
                     </div>
-                    <div class="tab-pane fade" id="day2" role="tabpanel" aria-labelledby="d2-tab">
-                        <ul class="pt-4 list-unstyled mb-0">
-                            <li class="d-flex flex-column flex-md-row py-4">
-                                <span class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 small text-muted">9:00
-                                    AM - 10:00 AM</span>
-                                <div class="flex-grow-1 ps-4 border-start border-3">
-                                    <h4>Excepteur sint occaecat</h4>
-                                    <p class="mb-0">
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                                        officia deserunt mollit anim id est laborum.
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="d-flex flex-column flex-md-row py-4">
-                                <span class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 small text-muted">10:00
-                                    AM - 11:00 AM</span>
-                                <div class="flex-grow-1 ps-4 border-start border-3">
-                                    <h4>Culpa qui officia deserunt</h4>
-                                    <p class="mb-0">
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                                        officia deserunt mollit anim id est laborum.
-                                    </p>
-                                </div>
-                            </li>
-                            <li class="d-flex flex-column flex-md-row py-4">
-                                <span class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 small text-muted">11:00
-                                    AM - 12:30 PM</span>
-                                <div class="flex-grow-1 ps-4 border-start border-3">
-                                    <h4>Excepteur sint occaecat cupidatat</h4>
-                                    <p class="mb-0">
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                                        officia deserunt mollit anim id est laborum.
-                                    </p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
