--- a/application/views/home.html
+++ b/application/views/home.html
@@ -3,7 +3,7 @@
   {% block title %}Home{% endblock %}
 
   {% block content %}
-  <main>
+  <main style="padding:0;">
     <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
@@ -11,9 +11,8 @@
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item">
-          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
-  
+        <div class="carousel-item img-fluid active">
+          <img src="/img/home-slider/homeslide1.png" class="d-block w-100" alt="Scenic landscape image">
           <div class="container">
             <div class="carousel-caption text-start">
               <h1>Example headline.</h1>
@@ -22,9 +21,8 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
-  
+        <div class="carousel-item img-fluid">
+          <img src="/img/home-slider/homeslide2.png" class="d-block w-100" alt="Scenic landscape image">  
           <div class="container">
             <div class="carousel-caption">
               <h1>Another example headline.</h1>
@@ -33,9 +31,8 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item active">
-          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
-  
+        <div class="carousel-item img-fluid">
+          <img src="/img/home-slider/homeslide3.png" class="d-block w-100" alt="Scenic landscape image"> 
           <div class="container">
             <div class="carousel-caption text-end">
               <h1>One more for good measure.</h1>
