--- a/application/views/faq.html
+++ b/application/views/faq.html
@@ -5,47 +5,22 @@
 {% block content %}
 <main>
     <h1> FAQs </h1>
-    <p>long text about the faq's sdsa fa sgag sag  thg rf dfd fs f sdf qw das d 3qfqs fqs g 2gqgg </p>
-    <div class="accordion" id="accordionPanelsStayOpenExample">
-
+    <p>If you have additional questions after going through this please reach out to us!</p>
+    <div class="accordion" id="accordionPanel">
+        {% for faq in data.faqs %}
         <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              What do you do?
+          <h2 class="accordion-header" id="panel-heading{{loop.index}}">
+            <button class="accordion-button fw-bolder {% if loop.index!=1 %}collapsed{% endif%}" type="button" data-bs-toggle="collapse" data-bs-target="#panel-collapse{{loop.index}}" aria-expanded={% if loop.index==1 %}"true"{% else %}"false"{% endif %} aria-controls="panel-collapse{{loop.index}}">
+              {{faq.question}}
             </button>
           </h2>
-          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+          <div id="panel-collapse{{loop.index}}" class="accordion-collapse collapse {% if loop.index==1 %}show{% endif%}" aria-labelledby="panel-heading{{loop.index}}">
             <div class="accordion-body">
-              Here at travel bluprint we strive to streamline the process of getting a personalized itinerary made for your trip.
+              {{faq.answer}}
             </div>
           </div>
         </div>
-
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-              Does it cost anything?
-            </button>
-          </h2>
-          <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-            <div class="accordion-body">
-                We are currently in an open beta to get the most amount of feedback possible. We plan to move to a more sustainable payment model if we receive positive feedback.
-            </div>
-          </div>
-        </div>
-
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-              Accordion Item #3
-            </button>
-          </h2>
-          <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-            <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-            </div>
-          </div>
-        </div>
-      </div>
+        {% endfor %}
+    </div>
 </main>
 {% endblock %}
