Make button more visible

--- a/application/views/city_plan.html
+++ b/application/views/city_plan.html
@@ -59,10 +59,10 @@
                 <label for="message-text" class="col-form-label">Where do you prefer to live?</label>
                 <br>
                 <input type="radio" class="btn-check" name="living_preference" id="survey-living-city" autocomplete="off" value="city">
-                <label class="btn btn-info" for="survey-living-city">City</label>
+                <label class="btn btn-outline-info" for="survey-living-city">City</label>
 
                 <input type="radio" class="btn-check" name="living_preference" id="survey-living-country" autocomplete="off" value="country">
-                <label class="btn btn-info" for="survey-living-country">Country</label>
+                <label class="btn btn-outline-info" for="survey-living-country">Country</label>
               </div>
 
 
