--- a/application/views/schedule.html
+++ b/application/views/schedule.html
@@ -27,12 +27,14 @@
                                 <span class="flex-shrink-0 width-13x me-md-4 d-block mb-3 mb-md-0 small text-muted">
                                     {{event.time}}
                                 </span>
+                                
                                 <div class="flex-grow-1 ps-4 border-start border-3">
                                     <h4>{{event.title}}</h4>
                                     <p class="mb-0">
                                         {{event.information}}
                                     </p>
                                 </div>
+                                <button type="button" class="btn btn-info">Map</button>
                             </li>
                             {% endfor %}
                         </ul>
