start itinerary generation structure

--- a/application/views/city_plan.html
+++ b/application/views/city_plan.html
@@ -41,10 +41,8 @@
               </div>
 
               <div class="mb-3">
-                <label for="survey-days" class="col-form-label">How many days do you want to travel?(1-7):</label>
+                <label for="survey-days" class="col-form-label">How many days do you want to travel?:</label>
                 <select class="form-select" id="survey-days" name="days">
-                  <option>1</option>
-                  <option>2</option>
                   <option>3</option>
                   <option>4</option>
                   <option>5</option>
