--- a/application/views/schedule.html
+++ b/application/views/schedule.html
@@ -6,7 +6,7 @@
 <main>
     <div class="container py-9 py-lg-11 position-relative z-index-1">
         <div class="row">
-            <div class="col-lg-5 mb-5 mb-lg-0">
+            <div class="col-lg-2 mb-2 mb-lg-0">
                 <h5 class="mb-4 text-info aos-init aos-animate" data-aos="fade-up">Schedule and Agenda</h5>
                 <div class="nav nav-pills flex-column aos-init aos-animate" id="myTab" role="tablist" data-aos="fade-up">
                     <button class="nav-link px-4 text-start active" id="hotel-tab" data-bs-toggle="tab" data-bs-target="#hotel" type="button" role="tab" aria-controls="hotel" aria-selected="true">
@@ -20,7 +20,7 @@
                 </div>
             </div>
             
-            <div class="col-lg-7 col-xl-6">
+            <div class="col-lg-10 col-xl-9">
                 <div data-aos="fade-up" class="tab-content aos-init aos-animate" id="myTabContent">
                     <div class="tab-pane fade active show" id="hotel" role="tabpanel" aria-labelledby="hotel-tab">
                         <div class="card">
@@ -48,7 +48,9 @@
                                         {{event.information}}
                                     </p>
                                 </div>
+                                {% if event.map_url %}
                                 <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#MapModal" data-bs-map-iframe="{{event.map_url}}">Map</button>
+                                {% endif %}
                             </li>
                             {% endfor %}
                         </ul>
