--- a/application/views/city_plan.html
+++ b/application/views/city_plan.html
@@ -52,7 +52,7 @@
               
 
               <div class="mb-3">
-                <label for="message-text" class="col-form-label">Where do you prefer to live?</label>
+                <label for="message-text" class="col-form-label">Where do you prefer to stay?</label>
                 <br>
                 <input type="radio" class="btn-check" name="living_preference" id="survey-living-city" autocomplete="off" value="city">
                 <label class="btn btn-outline-info" for="survey-living-city">City</label>
