--- a/application/views/schedule.html
+++ b/application/views/schedule.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <main>
+    <a href="/print-schedule?code={{data.code}}" target="_blank"><i class="bi bi-printer"></i></a>
     <div class="container py-9 py-lg-11 position-relative z-index-1">
         <div class="row">
             <div class="col-lg-2 mb-2 mb-lg-0">
@@ -43,7 +44,9 @@
                                 </span>
                                 
                                 <div class="flex-grow-1 ps-4 border-start border-3">
-                                    <h4>{{event.title}}</h4>
+                                    <h4>{{event.title}}
+                                        {% if event.url %}<a href="{{event.url}}" target="_blank"><i class="bi bi-paperclip"></i></a> {% endif %}
+                                    </h4> 
                                     <p class="mb-0">
                                         {{event.information}}
                                     </p>
