--- a/application/views/schedule.html
+++ b/application/views/schedule.html
@@ -5,6 +5,7 @@
 {% block content %}
 <main>
     <a href="/print-schedule?code={{data.code}}" target="_blank"><i class="bi bi-printer"></i></a>
+    <a href="" onclick="copyURL()" id="link-copy" title="Copy shareable link"><i class="bi bi-clipboard"></i></a>
     <div class="container py-9 py-lg-11 position-relative z-index-1">
         <div class="row">
             <div class="col-lg-2 mb-2 mb-lg-0">
@@ -99,6 +100,10 @@
     iframe = document.getElementById("gMapIframe")
     iframe.src = mapSrc
 });
+
+function copyURL(){
+    navigator.clipboard.writeText(window.location.href);
+}
 
 </script>
 {% endblock %}
